...
//                     primaryButton: .destructive(Text("DELEDE"), action: {
//            backgroundColor = .red
//        }),
//              secondaryButton: .cancel())
//        return Alert(title: Text(alertTitle),
//                     message: Text(alertMessage),
//                     dismissButton: .default(Text("OK")))
        switch alertType {
        case .success:
            return Alert(title: Text("There wan an error!"))
        case .error:
            return Alert(title: Text("There wan a success!"),message: nil,dismissButton: .default(Text("OK"), action: {
                backgroundColor = .green
...
